# pymysql-cli

./: pyproject.toml
pymysql_cli/: __main__.py  app.py  sql.py
