[tool.poetry]
name = "pymysql-cli"
version = "0.1.0"
description = "A CLI based on Python pymysql library."
authors = ["Ethan Ho <53266718+ethho@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.12.3"
pymysql = "^1.1.1"

[tool.poetry.scripts]
pymysql = "pymysql_cli.app:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
